--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "## Topics",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "server": "nodemon index.js",
+    "start": "node index.js"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/paintedlbird7/webauth-i-challenge.git"
