added cookies & sessions to Register & Logins

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js"
-    },
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/paintedlbird7/webauth-i-challenge.git"
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/paintedlbird7/webauth-i-challenge#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "helmet": "^3.16.0",
     "knex": "^0.16.5",
     "nodemon": "^1.18.11",
